# ekran

./: CMakeLists.txt  README.md  config.txt  main.cpp
data/Screen1/config/: config.yml
data/Screen1/img/pl/s0/: intro.avi
data/Screen2/scripts/: config.sh
data/config/: config.yml
data/programs/: crio  hot  manual  pr1
data/scripts/: config.sh  video.sh
inc/: Button.h  ConfigReader.h  Element.h  GUI.h  Image.h  Programs.h  Screen.h  Touch.h  TrackBar.h  Utils.h  Video.h  ugu.h
makefile/: makefile  objects.mk
makefile/src/: subdir.mk
scripts/: OpenCV_install.sh
src/: Button.cpp  ConfigReader.cpp  Control.cpp  Element.cpp  GUI.cpp  Image.cpp  Programs.cpp  Screen.cpp  Touch.cpp  TrackBar.cpp  Utils.cpp  Video.cpp  main.cpp  ugui.cpp
